--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bluishglobal</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/vendor/bootstrap.css" rel="stylesheet" />
+  <link href="assets/css/vendor/font-awesome.css" rel="stylesheet" />
+  <link href="assets/css/vendor/slick.css" rel="stylesheet" />
+  <link href="assets/css/vendor/slick-theme.css" rel="stylesheet" />
+  <link href="assets/css/vendor/odometer-theme-default.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
+  <script type="text/javascript">
+    window.odometerOptions = {
+      format: '(,ddd)',
+    };
+  </script>
+  <script src="assets/js/vendor/jquery-3.1.0.min.js"></script>
+  <script src="assets/js/vendor/jquery.easing.min.js"></script>
+  <script src="assets/js/vendor/tether.js"></script>
+  <script src="assets/js/vendor/bootstrap.js"></script>
+  <script src="assets/js/vendor/slick.js"></script>
+  <script src="assets/js/vendor/isotope.pkgd.min.js"></script>
+  <script src="assets/js/vendor/odometer.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
