--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Global Seafood Company - BLUISH GLOBAL</title>
+  <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bluishglobal</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" contents="BLUISH GLOBAL's Seafood All Over The World.">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Global Seafood Company - BLUISH GLOBAL">
+  <meta property="og:description" content="BLUISH GLOBAL's Seafood All Over The World.">
+  <meta property="og:image" content="assets/img/share.png">
+  <meta property="og:url" content="http://www.bluishglobal.com">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.PNG">
   <link href="assets/css/vendor/bootstrap.css" rel="stylesheet" />
   <link href="assets/css/vendor/font-awesome.css" rel="stylesheet" />
   <link href="assets/css/vendor/slick.css" rel="stylesheet" />
