--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Global Seafood Company - BLUISH GLOBAL">
   <meta property="og:description" content="BLUISH GLOBAL's Seafood All Over The World.">
-  <meta property="og:image" content="assets/img/ogtag.png">
+  <meta property="og:image" content="assets/img/ogtag1.png">
   <meta property="og:url" content="http://www.bluishglobal.com">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.PNG">
   <link href="assets/css/vendor/bootstrap.css" rel="stylesheet" />
